sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value lgr
	for (i<-0 to lgr-2)
                     ^